Recent projects can now be removed / deleted; Fixed bug where recent projects would be hidden due to overflow

--- a/src/renderer/components/NoProjectOpen.module.css
+++ b/src/renderer/components/NoProjectOpen.module.css
@@ -25,14 +25,27 @@
 
 .recentProject {
     width: 100%;
-    border-top: 1px solid black;
-    padding: 1rem
-}
-
-.recentProject:last-of-type {
     border-bottom: 1px solid black;
+    padding: 1rem;
+    display: flex;
 }
 
 .recentProject:hover {
     background-color: #e0e0e0;
+}
+
+.recentProject:hover .recentProjectRemove {
+    visibility: visible;
+}
+
+.selectedRecentProject {
+    background-color: #d1d1d1;
+}
+
+.recentProjectRemove {
+    visibility: hidden;
+    align-self: center;
+    min-width: 1rem;
+    max-width: 1rem;
+    padding: 0.5rem;
 }
